# dockge

./: .dockerignore  .gitignore  CONTRIBUTING.md  ISSUES.md  Makefile  README.md  Taskfile.yml  benchmark_test.go  bootstrap.sh  embed.go  go.mod  go.sum  handlers_test.go  main.go  main_test.go  package-lock.json  package.json  pnpm-lock.yaml  stacks.tar.xz  tsconfig.json
.claude/rules/: dev-workflow.md  sveltekit-best-practices.md
.github/scripts/: mark-as-nightly.ts  update-version.ts
.github/workflows/: ci.yml  close-incorrect-issue.yml
backend/: dockge-server.ts  image-update-checker.ts  stack.ts  terminal.ts
backend-go/: benchmark_test.go  embed.go  go.mod  go.sum  handlers_test.go  main.go
backend-go/testdata/: seed.json
backend-rust/: Cargo.toml
backend-rust/examples/: test_logs.rs
backend-rust/src/: auth.rs  config.rs  db.rs  debug.rs  docker.rs  embed.rs  error.rs  main.rs  socket_args.rs  state.rs  terminal.rs  update_checker.rs
backend-rust/src/broadcast/: eventbus.rs  mod.rs  watcher.rs
backend-rust/src/compose/: watcher.rs
backend-rust/src/db/: mod.rs  users.rs
backend-rust/src/docker/: mod.rs  types.rs
backend-rust/src/handlers/: agent.rs  auth.rs  docker.rs  image_updates.rs  logs.rs  mod.rs  service.rs  settings.rs  stack.rs  terminal.rs
backend-rust/src/models/: agent.rs  mod.rs  settings.rs  stack.rs  user.rs
backend-rust/src/terminal/: mod.rs
backend-rust/src/ws/: conn.rs  mod.rs  protocol.rs
backend/agent-socket-handlers/: docker-socket-handler.ts
backend/migrations/: 2025-01-15-0001-image-update-cache.ts
cmd/gen-mock-yaml/: main.go
cmd/gen-teststacks/: main.go
cmd/mock-daemon/: main.go
common/: compose-document.ts  util-common.ts
docker/: Dockerfile
docs/: ARCHITECTURE.md
e2e/: STEP7_ISSUES.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
frontend/: components.d.ts  vite.config.ts
mock-docker/: SPEC.md  package-lock.json  package.json  tsconfig.json
stacks/: .mock.yaml  manifest.json
web/: components.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web-svelte/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
ws-test/: GAPS.md  package.json  vitest.config.ts
ws-tests/: package.json  pnpm-lock.yaml  tsconfig.json
(+4658 files in other folders)
