[package]
name = "dockge-backend"
version = "1.5.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
socketioxide = { version = "0.15", features = ["state", "extensions"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "sync", "time", "macros", "process", "io-util", "fs"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "compression-gzip", "cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
jsonwebtoken = "9"
bcrypt = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
rand = "0.9"
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
sha1 = "0.10"
data-encoding = "2"
hex = "0.4"
regex = "1"
chrono = "0.4"
portable-pty = "0.8"
tikv-jemallocator = "0.6"
tokio-util = "0.7"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
strip = true
