[package]
name = "dockge"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dockge-rust"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
bollard = "0.19"
redb = "2"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
bcrypt = "0.16"
sha3 = "0.10"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
portable-pty = "0.8"
notify = "7"
rand = "0.9"
hex = "0.4"
bytes = "1"
futures-util = "0.3"
tokio-util = "0.7"
flate2 = "1"
brotli = "7"
mime_guess = "2"
tower-http = { version = "0.6", features = ["compression-gzip", "cors"] }
tower = "0.5"
http = "1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
